<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/ingredient_icon_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ingredient_icon_header"
            android:textColor="@color/green_pear"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ingredient_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/ingredient_icon_text"
            tools:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/brief_description_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brief_description_header"
            android:textColor="@color/green_pear"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/brief_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/best_before_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_before_date_header"
            android:textColor="@color/green_pear"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/best_before_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/location_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_header"
            android:textColor="@color/green_pear"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amount_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_header"
            android:textColor="@color/green_pear"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amount_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/amount_text"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:importantForAutofill="no"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/original_amount_hint_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_amount_hint_header"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/original_amount_hint_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/original_amount_hint_text"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unit_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_header"
            android:textColor="@color/green_pear"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/unit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ingredient_category_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_category_header"
            android:textColor="@color/green_pear"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredient_category_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/delete_button_text" />

        <Button
            android:id="@+id/commit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_toStartOf="@id/delete_button"
            android:layout_marginEnd="20dp"
            android:text="@string/commit_button_text" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="153dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/commit_button"
            android:text="Back" />

    </RelativeLayout>
</LinearLayout>
